package edu.fiuba.algo3.Enemies;

import edu.fiuba.algo3.TypeData.Buff;

public interface AttackReceiver {
    void takeBuff( Buff buff);
}
