package edu.fiuba.algo3.Players;

import edu.fiuba.algo3.TypeData.Credits.Credits;

public interface Looter {
    void transferCredits(Credits creditsToGive);
}
